--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "first_run": true,
     "last_surfed_url_id": 0,
+    "verbos": true,
     "use_random_urls": true,
     "proxy": {
         "http": "",
